--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "plaid": "^26.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^18.3.1",
+    "react-plaid-link": "^3.5.2",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
