--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.4",
+    "framer-motion": "^11.5.4",
     "plaid": "^26.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
